--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <h1 class="bg-indigo-500">HELLO WORLD</h1>
+    <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
